tests/error/static_out.gw
// [contains] 'static' can only be used at class scope
static int i;
